# CC1101-STM32G030

./: CMakeLists.txt  CMakePresets.json  README.md  cc1101_stm32g030.code-workspace
Core/Inc/: spi.h  system.h  uart.h
Core/Src/: spi.c  system.c  uart.c
CubeMX/: Makefile
CubeMX/STM32G0xx_LL/Inc/: stm32g0xx_ll_rcc.h
Docs/: Doxyfile
app/: CMakeLists.txt  main.c
cmake/: BuildType.cmake  Docs.cmake  GccArmNoneEabi.cmake
configured/: CMakeLists.txt  project_config.h.in
lib/cc1101/: cc1101.c  cc1101.h  cc1101_reg.h  cc1101_types.c  cc1101_types.h  cc1101_utils.c
